Gray-Space/src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>GS_SalesPath</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Collecting Items</fullName>
        </values>
        <values>
            <fullName>Created Order</fullName>
        </values>
        <values>
            <fullName>To send</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>GS_City__c</fullName>
        <label>City</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_Country__c</fullName>
        <label>Country</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_Payment__c</fullName>
        <label>Payment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GS_Payment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>GS_Shipment__c</fullName>
        <label>Shipment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GS_Shipment_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>GS_Space_Type__c</fullName>
        <label>Space Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GS_Space_Type_PickList</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>GS_State_Province__c</fullName>
        <label>State/Province</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_Street__c</fullName>
        <label>Street</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_Temporary_Test__c</fullName>
        <defaultValue>(NOW() + (1/1440) + (1/24))</defaultValue>
        <label>Temporary Test</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GS_Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
</CustomObject>